--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@nuxt/content": "^1.5.0",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.0",
+    "@statnett/vue-plotly": "^0.3.2",
+    "form-data": "^3.0.0",
     "nuxt": "^2.14.1",
-    "nuxt-start": "^2.14.1"
+    "nuxt-start": "^2.14.1",
+    "plotly.js": "^1.54.7"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
