--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nuxt-start": "^2.14.1",
     "plotly.js": "^1.54.7",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "vue-draggable-resizable-gorkys": "^2.4.4"
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
