--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "plotly.js": "^1.54.7",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "vue-draggable-resizable-gorkys": "^2.4.4"
+    "vue-grid-layout": "^2.3.11"
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
