--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.0",
     "@statnett/vue-plotly": "^0.3.2",
+    "apexcharts": "^3.23.0",
     "d3": "^6.2.0",
     "d3-vs": "^1.3.4",
     "form-data": "^3.0.0",
+    "fusioncharts": "^3.16.0",
     "nuxt": "^2.14.1",
     "nuxt-socket-io": "^1.1.11",
     "nuxt-start": "^2.14.1",
     "plotly.js": "^1.54.7",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "vue-apexcharts": "^1.6.0",
+    "vue-fusioncharts": "^3.1.0",
     "vue-grid-layout": "^2.3.11"
   },
   "devDependencies": {
