--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apexcharts": "^3.23.0",
     "d3": "^6.2.0",
     "d3-vs": "^1.3.4",
+    "echarts": "^5.0.2",
     "form-data": "^3.0.0",
     "fusioncharts": "^3.16.0",
     "nuxt": "^2.14.1",
