--- a/package.json
+++ b/package.json
@@ -12,18 +12,15 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.5.0",
+    "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.0",
-    "@statnett/vue-plotly": "^0.3.2",
-    "d3": "^6.2.0",
-    "d3-vs": "^1.3.4",
     "echarts": "^5.0.2",
     "echarts-for-vue": "^1.1.1",
     "echarts-stat": "^1.2.0",
     "form-data": "^3.0.0",
     "nuxt": "^2.14.1",
     "nuxt-start": "^2.14.1",
-    "plotly.js": "^1.54.7",
     "vue-grid-layout": "^2.3.11"
   },
   "devDependencies": {
