--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "iris3-frontend",
+  "name": "deepmaps-frontend",
   "version": "1.0.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "nuxt --hostname 0.0.0.0 --port 9004",
     "build": "nuxt build",
