Add cytoscape example

--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
     "@nuxt/content": "^1.5.0",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.0",
+    "cytoscape-avsdf": "^1.0.0",
+    "cytoscape-cise": "^1.0.0",
+    "cytoscape-cola": "^2.4.0",
+    "cytoscape-cose-bilkent": "^4.1.0",
+    "cytoscape-dagre": "^2.3.2",
+    "cytoscape-euler": "^1.2.2",
+    "cytoscape-fcose": "^2.0.0",
+    "cytoscape-klay": "^3.1.4",
+    "cytoscape-spread": "^3.0.0",
     "echarts": "^5.0.2",
     "echarts-for-vue": "^1.1.1",
     "echarts-stat": "^1.2.0",
@@ -22,6 +31,7 @@
     "nuxt": "^2.14.1",
     "nuxt-dropzone": "^1.0.4",
     "nuxt-start": "^2.14.1",
+    "vue-cytoscape": "^1.0.8",
     "vue-grid-layout": "^2.3.11",
     "vue-json-excel": "^0.3.0",
     "vuelidate": "^0.7.6"
