--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "form-data": "^3.0.0",
     "nuxt": "^2.14.1",
     "nuxt-dropzone": "^1.0.4",
+    "nuxt-socket-io": "1.1.13",
     "nuxt-start": "^2.14.1",
     "vue-cytoscape": "^1.0.8",
     "vue-grid-layout": "^2.3.11",
