--- a/package.json
+++ b/package.json
@@ -16,19 +16,16 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/auth-next": "5.0.0-1618898588.9655d0e",
     "@nuxtjs/axios": "^5.13.1",
-    "cytoscape-avsdf": "^1.0.0",
-    "cytoscape-cise": "^1.0.0",
     "cytoscape-cola": "^2.4.0",
-    "cytoscape-cose-bilkent": "^4.1.0",
-    "cytoscape-dagre": "^2.3.2",
     "cytoscape-euler": "^1.2.2",
     "cytoscape-fcose": "^2.0.0",
-    "cytoscape-klay": "^3.1.4",
     "cytoscape-spread": "^3.0.0",
-    "echarts": "^5.0.2",
-    "echarts-for-vue": "^1.1.1",
+    "echarts": "^5.1.1",
+    "echarts-for-vue": "^1.3.0",
+    "echarts-gl": "^2.0.4",
     "echarts-stat": "^1.2.0",
     "form-data": "^3.0.0",
+    "nice-color-palettes": "^3.0.0",
     "nuxt": "^2.14.1",
     "nuxt-dropzone": "^1.0.4",
     "nuxt-socket-io": "1.1.13",
@@ -43,6 +40,7 @@
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/vuetify": "^1.11.2",
+    "@vue/composition-api": "^1.0.0-rc.8",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
