--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "cytoscape-euler": "^1.2.2",
     "cytoscape-fcose": "^2.0.0",
     "cytoscape-spread": "^3.0.0",
+    "d3-array": "^2.12.1",
+    "d3-color": "^2.0.0",
+    "d3-scale": "^3.3.0",
+    "d3-shape": "^1.3.7",
     "echarts": "^5.1.1",
     "echarts-for-vue": "^1.3.0",
     "echarts-gl": "^2.0.4",
