--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nuxt --hostname 0.0.0.0 --port 9004",
     "build": "nuxt build",
     "start": "nuxt-start -p 9004 -H 0.0.0.0",
+    "start-test": "nuxt-start -p 9006 -H 0.0.0.0",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "npm run lint:js"
