--- a/package.json
+++ b/package.json
@@ -17,24 +17,25 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/auth-next": "5.0.0-1618898588.9655d0e",
     "@nuxtjs/axios": "^5.13.1",
+    "clustergrammer": "^1.19.5",
     "cytoscape-cola": "^2.4.0",
     "cytoscape-euler": "^1.2.2",
-    "cytoscape-fcose": "^2.0.0",
     "cytoscape-spread": "^3.0.0",
+    "d3": "^5.15.0",
     "d3-array": "^2.12.1",
     "d3-color": "^2.0.0",
     "d3-scale": "^3.3.0",
     "d3-shape": "^1.3.7",
     "echarts": "^5.1.1",
-    "echarts-for-vue": "^1.3.0",
+    "echarts-for-vue": "^1.4.1",
     "echarts-gl": "^2.0.4",
     "echarts-stat": "^1.2.0",
     "form-data": "^3.0.0",
     "nice-color-palettes": "^3.0.0",
-    "nuxt": "^2.14.1",
+    "nuxt": "^2.4.5",
     "nuxt-dropzone": "^1.0.4",
     "nuxt-socket-io": "1.1.13",
-    "nuxt-start": "^2.14.1",
+    "nuxt-start": "^2.12.2",
     "particles.vue": "^2.10.0",
     "vue-cytoscape": "^1.0.8",
     "vue-grid-layout": "^2.3.11",
