--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deepmaps-frontend",
-  "version": "0.12.0",
+  "version": "0.13.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -13,6 +13,7 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@ebi-gene-expression-group/anatomogram": "^2.4.0",
     "@nuxt/content": "^1.5.0",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/auth-next": "5.0.0-1618898588.9655d0e",
@@ -31,6 +32,7 @@
     "echarts-gl": "^2.0.4",
     "echarts-stat": "^1.2.0",
     "form-data": "^3.0.0",
+    "lodash": "^4.17.21",
     "nice-color-palettes": "^3.0.0",
     "nuxt": "^2.4.5",
     "nuxt-dropzone": "^1.0.4",
